# voidrat

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: linux.yml  quality.yml  release.yml  windows.yml
resources/data/: sol_node.json
src/: build.rs  main.rs  ui.rs  util.rs  voidrat.rs
src/parsers/: mod.rs  warframestat.rs  world_state.rs
src/widgets/: colored_label.rs  mod.rs  toggle_button.rs
