[package]
name = "voidrat"
version = "1.1.0"
edition = "2021"
build = "src/build.rs"

[profile.release]
lto = true

[build-dependencies]
winres = "0.1"

[dependencies]
fern = "0.6.1"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.14.0", features = ["chrono", "json"] }
chrono = "0.4.19"
parking_lot = "0.12.1"
eframe = {version = "0.19.0", features = ["persistence"]}
egui_extras = { version = "0.19.0", features = ["image"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
image = { version = "0.24.2", features = ["webp"] }
bincode = "2.0.0-rc.1"
filetime = "0.2.17"
rust-embed = "6.4.0"
phf = { version = "0.11", features = ["macros"] }
rodio = "0.16.0"

[package.metadata.winres]
OriginalFilename = "VOIDRAT.EXE"